examples/v0.4/errors/invalid_property_type.nova
User: M = {
    age: N
}

user: User = {
    age = 19
}

user.age = "twenty"

/*
Expected Error:

Datatype mismatch.
*/